--- a/qrgen/index.html
+++ b/qrgen/index.html
@@ -9,7 +9,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="text">
+        <h1>QR Creator</h1>
+        <p>Type in your URL below:</p>
+        <input id="url" name="url" type="url" placeholder="Ex: www.google.com">
+        <input type="submit" id="send" value="Convert">
+    </div>
+
+    <div class="img">
+        <img id="image" src="" alt="qr code">
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
